scss/style/_type.scss
h1, .h1 {
  @extend .typo-main-title;
}

h2, .h2 {
  @extend .typo-title-l2;
}

h3, .h3 {
  @extend .typo-title-l3;
}

h4, .h4 {
  @extend .typo-title-l4;
}

h5, .h5 {}

h6, .h6 {}

p {
  @extend .typo-body-text;

  max-width: $text-legibility-max-width;

  strong {
    @extend .typo-bold-text;
  }
}

ul {
  @extend .typo-list-body-text;
}

.lead {
  @extend .typo-story-text;
}

